--- a/helping_hands_site/helping_hands_app/templates/helping_hands_app/index.html
+++ b/helping_hands_site/helping_hands_app/templates/helping_hands_app/index.html
@@ -1,7 +1,7 @@
 {% if latest_event_list %}
     <ul>
     {% for event in latest_event_list %}
-        <li><a href="/polls/{{ poll.id }}/">{{ poll.question }}</a></li>
+        <li><a href="/events/{{ event.id }}/">{{ event.event_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
