--- a/helping_hands_site/helping_hands_app/templates/helping_hands_app/detail.html
+++ b/helping_hands_site/helping_hands_app/templates/helping_hands_app/detail.html
@@ -1,6 +1,12 @@
 <h1>{{ event.event_text }}</h1>
-<ul>
+
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+<form action="{% url 'events:vote' event.id %}" method="post">
+{% csrf_token %}
 {% for choice in event.choice_set.all %}
-    <li>{{ choice.choice_text }}</li>
+    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
 {% endfor %}
-</ul>
+<input type="submit" value="Vote" />
+</form>
